@@ -13,6 +13,16 @@ Release 0.7 (in development)
 Release 0.6.2 (in development)
 ==============================
 
+* Fix cross-reference roles when put into substitutions.
+
+* Don't put image "alt" text into table-of-contents entries.
+
+* In the LaTeX writer, do not raise an exception on too many section
+  levels, just use the "subparagraph" level for all of them.
+
+* #145: Fix autodoc problem with automatic members that refuse to be
+  getattr()'d from their parent.
+
 * If specific filenames to build are given on the command line,
   check that they are within the source directory.
 
@@ -23,7 +33,7 @@ Release 0.6.2 (in development)
 * #134: Fix pending_xref leftover nodes when using the todolist
   directive from the todo extension.
 
-
+ 
 Release 0.6.1 (Mar 26, 2009)
 ============================
 
